Fix sidebar invisible close button

--- a/themes/mabinouze-v1/assets/sass/main.scss
+++ b/themes/mabinouze-v1/assets/sass/main.scss
@@ -6,6 +6,13 @@ $primary-img: url(/unsplash/Lq1rOaigDoY-reduce.jpeg);
 .small-caps {
     font-variant: small-caps;
 }
+.btn-close {
+    background-color: transparent;
+    background-image: var(--bs-btn-close-bg);
+    background-position: center;
+    background-size: 1em;
+    background-repeat: no-repeat;
+}
 
 blockquote {
     border-left: 4px solid var(--bs-primary-border-subtle);
